--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="com.example.tyler.lockpick.MainActivity"
-    android:background="#a8a8a8">
+    android:background="#a8a8a8"
+    android:onClick="backgroundTap">
 
     <include layout="@layout/content_main" />
     <ImageView
@@ -14,7 +15,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:longClickable="true"
-        android:id="@+id/lockpick" />
+        android:id="@+id/lockpick"
+        android:contentDescription="@string/lockpick" />
+
+    <ImageView
+        android:src="@drawable/black"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/black_line"
+        android:contentDescription="@string/line"
+        android:paddingTop="200dp"
+        android:paddingLeft="200dp" />
+
+    <ImageView
+        android:src="@drawable/pink"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pink_line"
+        android:contentDescription="@string/line"
+        android:paddingTop="200dp"
+        android:paddingLeft="200dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -23,7 +43,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@mipmap/toolbox"
-        app:backgroundTint="#ffffff"
+        app:backgroundTint="#638d99"
         android:scaleType="center"
         android:onClick="toolboxTap" />
 
