--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,9 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/pink_line"
-        android:contentDescription="@string/line"
-        android:paddingTop="200dp"
-        android:paddingLeft="200dp" />
+        android:contentDescription="@string/line"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
